--- a/BDI/links/index.html
+++ b/BDI/links/index.html
@@ -45,25 +45,45 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="../images/intro.jpg" alt="" /></span>
-								<p>PUT TEXTE............................................................</p>
-								<a href="#work">LIEN POUR MOTIVATION</a>.</p>
+								<p>Le cercle de vie chez les Indiens est l'origine de toute chose, il représente les éléments et l'équilibre qui règne entre eux. Pendant des siècles, le cercle de vie a été maintenu par les descendants des 4 familles ancestrales indiennes, assurant leur pouvoir et leur prospérité: l'Est leur assurait la lumière et la paix, le Sud leur donnait la chaleur, l'Ouest leur donnait la pluie, le Nord grâce au vent vivifiant leur assurait la force et l'endurance. Jusqu'au jour où il fut rompu, les familles dispersées. Rien ni personne ne pouvait restaurer le cercle de vie pendant des décennies. Mais aujourd'hui, le grand cercle renaquit de ses cendres : les 4 familles se sont à nouveau réunies, encore plus puissantes qu'avant, et n'ont pas l'intention de se séparer à nouveau. Pour s'en assurer, elles tinrent un conseil autour du cercle et créèrent le Bureau des Indiens, elles donnèrent aussi à chaque famille une spécialité pour survivre au monde actuel :</p>
+								<p>- La 1 ère, toujours célèbre pour sa créativité et son esprit d'innovation, reçu Automatisme et système embarqués.</p>
+								<p>- La 2 ème, qui jadis tissait leurs habits et tipis, eut Textile et Fibre.</p>
+								<p>- La 3 ème, longtemps appelée "le conseil de guerre", garda sa sagesse et prit Informatique et réseaux.</p>
+								<p>- Et enfin, la 4 ème, anciennement spécialisée en armes et en survie, se vit attribuée Mécanique.</p>
+								<p>Leur but à présent est d'élargir leurs rangs et d'initier les nouveaux à leurs traditions et pratiques tout en honorant l'esprit de leurs ancêtres.</p>
+								<a href="#work">NOTRE TRIBU</a>.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">MOTIVATION</h2>
+								<h2 class="major">TRIBU</h2>
 								<span class="image main"><img src="../images/Motivation.jpg" alt="" /></span>
-								<p>ICI LES MOTIVATIONS BDI..............................................</p>
-								<p>.....................................................................</p>
-								<a href="#about">NOTRE HISTOIRE</a>.</p>
+								<p>HATIM BERRADI :: PREZ WERNER </p>
+								I am not afraid of an army of lions led by a sheep; I am afraid of an army of sheep led by a lion.
+								<span class="image main"><img src="../images/hatim.jpg" alt="" /></span>
+								<p>OUSSAMA MAHIOUS :: PREZ LUMIERE </p>
+								Dites à mes amis que je m'en vais, je pars vers de nouveaux pays ..." Koda.
+								<span class="image main"><img src="../images/oussama.jpg" alt="" /></span>
+								<p>Nathan Roudil :: trésorier </p>
+								Ce n'est pas parce qu'il y a un trou qu'il y a un écureuil dedans.
+								<span class="image main"><img src="../images/nathan.jpg" alt="" /></span>
+								<p>Marion Gouache :: vice trésorier </p>
+								I am the reality of all coyotes. The archetype. The epitome.
+								<span class="image main"><img src="../images/marionG.jpg" alt="" /></span>
+								<p>Marion Bannier :: secrétaire </p>
+								I am the reality of all coyotes. The archetype. The epitome.
+								<span class="image main"><img src="../images/marionB.jpg" alt="" /></span>
+								<p>Hamza Kebouri :: vice secrétaire </p>
+								When the Owl sings, the Night is Silent.
+								<span class="image main"><img src="../images/hamza.jpg" alt="" /></span>
+								<a href="#about">Avec nos respo nous vous proposons ce chemin </a>.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">HISTOIRE</h2>
-								<span class="image main"><img src="../images/histoire.jpg" alt="" /></span>
-								<p>ICI L'HISOIRE........................................................</p>
-								<p>.....................................................................</p>
+								<h2 class="major">Planing</h2>
+								<span class="image main"><img src="../images/planing.jpg" alt="" /></span>
+								<a href="#contact"> De meme n'hesitez pas a nous rejoindre(Facebook instagram et twitter) ou nous contacter</a>
 							</article>
 
 						<!-- Contact -->
@@ -91,7 +111,7 @@
 								</form>
 								<ul class="icons">
 									<li><a href="https://twitter.com/SElharbil" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/sami.elharbil" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.facebook.com/BureauDesIndiens/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/samy_elharbil/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
